<resources>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Wordle</string>
    <string name="next">NEXT</string>
    <string name="wordle">Wordle</string>
    <string name="statistics">STATISTICS</string>
    <string name="played">Played</string>
    <string name="win">Win %</string>
    <string name="current_n_streak">Current\n Streak</string>
    <string name="max_n_streak">Max\n Streak</string>
    <string name="guess_distribution">GUESS DISTRIBUTION</string>

</resources>
